# pdf_extractor

./: .gitignore  pyproject.toml  test_gemini.py
src/: config.py
src/core/: config.py
src/data/speed_feed/haas/raw/: temp.json
src/db/: __init__.py  base.py
src/db/postgres/: __init__.py  connection.py
src/db/postgres/models/: __init__.py  company.py  company_machine_mapping.py  company_tool_mapping.py  cutting_tool_taxonomy.py  default_policy.py  default_policy_v2.py  disabled_default_policy.py  formatted_feature.py  invitation.py  job.py  machine.py  machine_operation_plan.py  material.py  operation_name.py  policy_override.py  speed_and_feed.py  stock.py  tool.py  tool_attribute.py  tool_master.py  tool_taxonomy.py  tool_type.py  user.py  user_default_policy_exclusion.py  user_feedback.py  user_policy.py  user_role.py  vendor.py
src/routers/speed_feed/: extraction_router.py  extractor.py  router.py  scraper.py
src/services/: __init__.py  data_loader_service.py  llm_service.py
src/services/speed_feed/: __init__.py  data_loader_service.py  gemini_client.py  main.py  pdf_extractor_service.py  pdf_processor.py  scraper_service.py
