[project]
name = "etl-ingestion-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.0",
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.24.0",
    "sqlalchemy-utils>=0.42.1",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn>=0.40.0",
]
